tests/libdef_scoped/foo/test.js
commonValueNoOverride as empty; // error: string ~> empty
commonValueWithOverride as empty; // error: number ~> empty
fooSpecific as empty; // error: number ~> empty
barSpecific; // error: not-bound
